Bug fixes and light/dark mode
Feature:
- Add light and dark mode.

Bug Fixes:
- Fix color mismatch on the landing page.
- Remove console.log() for habits
- Route to habit page on login page if token valid

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -224,11 +224,6 @@
 
 /* Landing Page */
 
-.landing-page {
-  width: 100vw;
-  height: 100vh;
-}
-
 .landing-main-content {
   padding: 6rem;
   display: flex;
